# device-register

./: .gitignore  Cargo.toml  README.md  README.md~1  flake.nix
.github/workflows/: ci.yml  release.yml
device-register/: Cargo.toml  README.md
device-register-async/: Cargo.toml  README.md
device-register-async/src/: lib.rs
device-register-async/src/tests/: u8-address-read.rs
device-register-async/tests/: enum-address-edit.rs  modular-bitfield.rs  new-type-write.rs  newtype-write.rs  u8-address-read.rs
device-register-impl/: Cargo.toml
device-register-impl/src/: lib.rs
device-register-macro/: Cargo.toml  README.md
device-register-macro/src/: lib.rs
device-register/src/: lib.rs
device-register/tests/: common.rs  enum-address-edit.rs  error_generic.rs  manual-impl.rs  modular-bitfield.rs  new-type-write.rs  newtype-write.rs  u8-address-read.rs
src/: lib.rs
tests/: common.rs  enum-address-edit.rs  enum-address.rs  new-type-write.rs  register-map.rs  u8-address-read.rs
