[package]
name = "device-register-async"
version = "0.1.0"
edition = "2021"
authors = ["xgroleau <grox2901@usherbrooke.ca>"]
repository = "https://github.com/xgroleau/device-register"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/device-register"
description = "A no-std toolkit to describe the register of your peropherals to ease driver development"
documentation = "https://docs.rs/device-register-async"
readme = "README.md"
keywords = ["async", "driver", "embedded-hal-driver", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
]


[dependencies]
device-register = { version = "0.1.0", path = "../device-register" }
futures = { version = "0.3.23", default-features = false }

[dev-dependencies]
modular-bitfield = "0.11.2"
tokio = { version = "1.20.1", features = ["macros", "rt"] }
