[package]
name = "device-register-async"
version = "0.4.0"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]
repository = "https://github.com/xgroleau/device-register"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/device-register"
description = "A `no_std` library to describe the registers permissions of a device to ease async driver development."
documentation = "https://docs.rs/device-register-async"
readme = "README.md"
keywords = ["async", "driver", "embedded-hal-driver", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]


[dependencies]
device-register = { path = "../device-register", version = "0.4.0" }

[dev-dependencies]
modular-bitfield = "0.11.2"
tokio = { version = "1.20.1", features = ["macros", "rt"] }
