[package]
name = "device-register-macro"
version = "0.1.0"
edition = "2021"
authors = [ "Xavier Groleau <xavgroleau@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.91", features = ["extra-traits"] }
quote = "1.0.18"
proc-macro2 = "1.0.37"
darling = "0.14.1"
