[package]
name = "device-register-macro"
version = "0.4.0"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]
repository = "https://github.com/xgroleau/device-register"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/device-register"
description = "Internal macro lib for the `device-register` crate"
documentation = "https://docs.rs/device-register-macro"
readme = "README.md"
keywords = ["driver", "embedded-hal-driver", "macro"]
categories = ["embedded", "hardware-support"]


[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0.91", features = ["extra-traits"] }
quote = "1.0.18"
proc-macro2 = "1.0.37"
darling = "0.14.1"
