[package]
name = "device-register"
version = "0.2.0"
edition = "2021"
authors = ["xgroleau <xavgroleau@gmail.com>"]
repository = "https://github.com/xgroleau/device-register"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/device-register"
description = "A no-std toolkit to describe the register of your peropherals to ease driver development"
documentation = "https://docs.rs/device-register"
readme = "README.md"
keywords = ["driver", "embedded-hal-driver", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
]

[dependencies]
device-register-macro = { path = "../device-register-macro", version = "0.2.0" }

[dev-dependencies]
modular-bitfield = "0.11.2"
tokio-test = "0.4.2"

